// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <AssetLinks /> component unchanged 1`] = `
<div>
  <div
    class="py-6 mx-5"
  >
    <div
      class="text-lg mb-2"
    >
      Assets
    </div>
    <a
      class="underline"
      href="/pressAssets/showrunner/assets.zip"
    >
      Download zip file
    </a>
  </div>
</div>
`;

exports[`renders <BuyButton /> component unchanged 1`] = `
<div>
  <a
    aria-label="blah on Steam"
    class="flex mx-auto justify-center items-center w-[288px] h-12 text-base my-10 border border-black"
    data-testid="buy-button-blah"
    href="https://store.steampowered.com/app/1234"
    rel="noopener"
    style="box-shadow: 0 10px 10px -10px #22959;"
    target="blank"
  >
    <div
      class="flex mr-1"
    >
      <img
        alt="Steam logo"
        data-nimg="1"
        data-testid="steam-logo"
        decoding="async"
        height="32"
        loading="lazy"
        src="/_next/image?url=%2FsteamLogo.png&w=64&q=75"
        srcset="/_next/image?url=%2FsteamLogo.png&w=32&q=75 1x, /_next/image?url=%2FsteamLogo.png&w=64&q=75 2x"
        style="color: transparent;"
        width="32"
      />
    </div>
    <div
      class="underline"
    >
      blah
       on Steam
    </div>
  </a>
</div>
`;

exports[`renders <EmailSection /> component unchanged 1`] = `
<div>
  <div
    class="my-10"
  >
    <h2
      class="text-2xl my-5"
    >
      Email
    </h2>
    <div
      class="my-2"
    >
      Complete reCAPTCHA to reveal
    </div>
    <div>
      <div />
    </div>
  </div>
</div>
`;

exports[`renders <FeatureSection /> component unchanged 1`] = `
<div>
  <div
    class="flex-wrap flex m-10 justify-center"
  >
    <div
      class="flex flex-col text-center max-w-2xl my-auto"
    >
      <h2
        class="text-2xl"
      >
        Test Title
      </h2>
      <p
        class="m-5"
      >
        Test Text
      </p>
    </div>
    <div
      class="flex flex-col my-auto cursor-pointer shadow-md shadow-undefined"
      style="box-shadow: 0 10px 10px -10px undefined;"
    >
      <img
        alt="Test Title image"
        data-nimg="1"
        data-testid="feature-section-test-title-image"
        decoding="async"
        height="270"
        loading="lazy"
        src="/_next/image?url=%2FtmlCard-1.png&w=1080&q=75"
        srcset="/_next/image?url=%2FtmlCard-1.png&w=640&q=75 1x, /_next/image?url=%2FtmlCard-1.png&w=1080&q=75 2x"
        style="color: transparent;"
        width="480"
      />
      <div
        class="flex flex-row mx-auto mt-2"
      >
        <div
          class="mx-1"
        >
          <img
            alt="Zoom icon"
            data-nimg="1"
            decoding="async"
            height="16"
            loading="lazy"
            src="/_next/image?url=%2Fzoom.png&w=32&q=75"
            srcset="/_next/image?url=%2Fzoom.png&w=16&q=75 1x, /_next/image?url=%2Fzoom.png&w=32&q=75 2x"
            style="color: transparent;"
            width="16"
          />
        </div>
        <small>
          Zoom
        </small>
      </div>
    </div>
  </div>
  <div />
</div>
`;

exports[`renders <FeatureSection /> reversed component unchanged 1`] = `
<div>
  <div
    class="flex-wrap-reverse flex m-10 justify-center"
  >
    <div
      class="flex flex-col my-auto cursor-pointer shadow-md shadow-undefined"
      style="box-shadow: 0 10px 10px -10px undefined;"
    >
      <img
        alt="Test Title image"
        data-nimg="1"
        data-testid="feature-section-test-title-image"
        decoding="async"
        height="270"
        loading="lazy"
        src="/_next/image?url=%2FtmlCard-1.png&w=1080&q=75"
        srcset="/_next/image?url=%2FtmlCard-1.png&w=640&q=75 1x, /_next/image?url=%2FtmlCard-1.png&w=1080&q=75 2x"
        style="color: transparent;"
        width="480"
      />
      <div
        class="flex flex-row mx-auto mt-2"
      >
        <div
          class="mx-1"
        >
          <img
            alt="Zoom icon"
            data-nimg="1"
            decoding="async"
            height="16"
            loading="lazy"
            src="/_next/image?url=%2Fzoom.png&w=32&q=75"
            srcset="/_next/image?url=%2Fzoom.png&w=16&q=75 1x, /_next/image?url=%2Fzoom.png&w=32&q=75 2x"
            style="color: transparent;"
            width="16"
          />
        </div>
        <small>
          Zoom
        </small>
      </div>
    </div>
    <div
      class="flex flex-col text-center max-w-2xl my-auto"
    >
      <h2
        class="text-2xl"
      >
        Test Title
      </h2>
      <p
        class="m-5"
      >
        Test Text
      </p>
    </div>
  </div>
  <div />
</div>
`;

exports[`renders <Footer /> component unchanged 1`] = `
<div>
  <footer
    class="mt-auto w-full flex justify-center h-11 bg-black text-white"
    data-testid="footer"
  >
    <a
      class="underline flex items-center"
      href="https://twitter.com/Inexplicable_G"
      rel="noopener"
      target="blank"
    >
      <img
        alt="Twitter logo"
        data-nimg="1"
        data-testid="twitter-logo"
        decoding="async"
        height="32"
        loading="lazy"
        src="/_next/image?url=%2FtwitterLogo.png&w=64&q=75"
        srcset="/_next/image?url=%2FtwitterLogo.png&w=32&q=75 1x, /_next/image?url=%2FtwitterLogo.png&w=64&q=75 2x"
        style="color: transparent;"
        width="32"
      />
      <div
        class="text-lg ml-2"
      >
        @Inexplicable_G
      </div>
    </a>
  </footer>
</div>
`;

exports[`renders <GameCard /> component unchanged 1`] = `
<div>
  <div
    class="flex flex-col m-10"
    data-testid="game-card-This Merchant Life"
  >
    <a
      aria-label="Find out more about This Merchant Life"
      class="w-72 h-72 bg-cover flex flex-col-reverse bg-[url('/tmlCard.png')]"
      href="/this-merchant-life"
    >
      <div
        class="flex items-center justify-center text-base h-7 bg-white text-black border border-black"
        style="box-shadow: 0 10px 10px -10px #549946;"
      >
        <div
          class="underline"
        >
          Find out more
        </div>
      </div>
    </a>
    <a
      aria-label="This Merchant Life on Steam"
      class="flex mx-auto justify-center items-center w-[288px] h-12 text-base my-10 border border-black"
      data-testid="buy-button-This Merchant Life"
      href="https://store.steampowered.com/app/666730"
      rel="noopener"
      style="box-shadow: 0 10px 10px -10px #549946;"
      target="blank"
    >
      <div
        class="flex mr-1"
      >
        <img
          alt="Steam logo"
          data-nimg="1"
          data-testid="steam-logo"
          decoding="async"
          height="32"
          loading="lazy"
          src="/_next/image?url=%2FsteamLogo.png&w=64&q=75"
          srcset="/_next/image?url=%2FsteamLogo.png&w=32&q=75 1x, /_next/image?url=%2FsteamLogo.png&w=64&q=75 2x"
          style="color: transparent;"
          width="32"
        />
      </div>
      <div
        class="underline"
      >
        This Merchant Life
         on Steam
      </div>
    </a>
  </div>
</div>
`;

exports[`renders <GameCards /> component unchanged 1`] = `
<div>
  <div
    class="flex flex-row flex-wrap justify-center"
  >
    <div
      class="flex flex-col m-10"
      data-testid="game-card-Showrunner"
    >
      <a
        aria-label="Find out more about Showrunner"
        class="w-72 h-72 bg-cover flex flex-col-reverse bg-[url('/showrunnerCard.png')]"
        href="/showrunner"
      >
        <div
          class="flex items-center justify-center text-base h-7 bg-white text-black border border-black"
          style="box-shadow: 0 10px 10px -10px #F43737;"
        >
          <div
            class="underline"
          >
            Find out more
          </div>
        </div>
      </a>
      <a
        aria-label="Showrunner on Steam"
        class="flex mx-auto justify-center items-center w-[288px] h-12 text-base my-10 border border-black"
        data-testid="buy-button-Showrunner"
        href="https://store.steampowered.com/app/2058200"
        rel="noopener"
        style="box-shadow: 0 10px 10px -10px #F43737;"
        target="blank"
      >
        <div
          class="flex mr-1"
        >
          <img
            alt="Steam logo"
            data-nimg="1"
            data-testid="steam-logo"
            decoding="async"
            height="32"
            loading="lazy"
            src="/_next/image?url=%2FsteamLogo.png&w=64&q=75"
            srcset="/_next/image?url=%2FsteamLogo.png&w=32&q=75 1x, /_next/image?url=%2FsteamLogo.png&w=64&q=75 2x"
            style="color: transparent;"
            width="32"
          />
        </div>
        <div
          class="underline"
        >
          Showrunner
           on Steam
        </div>
      </a>
    </div>
    <div
      class="flex flex-col m-10"
      data-testid="game-card-This Merchant Life"
    >
      <a
        aria-label="Find out more about This Merchant Life"
        class="w-72 h-72 bg-cover flex flex-col-reverse bg-[url('/tmlCard.png')]"
        href="/this-merchant-life"
      >
        <div
          class="flex items-center justify-center text-base h-7 bg-white text-black border border-black"
          style="box-shadow: 0 10px 10px -10px #549946;"
        >
          <div
            class="underline"
          >
            Find out more
          </div>
        </div>
      </a>
      <a
        aria-label="This Merchant Life on Steam"
        class="flex mx-auto justify-center items-center w-[288px] h-12 text-base my-10 border border-black"
        data-testid="buy-button-This Merchant Life"
        href="https://store.steampowered.com/app/666730"
        rel="noopener"
        style="box-shadow: 0 10px 10px -10px #549946;"
        target="blank"
      >
        <div
          class="flex mr-1"
        >
          <img
            alt="Steam logo"
            data-nimg="1"
            data-testid="steam-logo"
            decoding="async"
            height="32"
            loading="lazy"
            src="/_next/image?url=%2FsteamLogo.png&w=64&q=75"
            srcset="/_next/image?url=%2FsteamLogo.png&w=32&q=75 1x, /_next/image?url=%2FsteamLogo.png&w=64&q=75 2x"
            style="color: transparent;"
            width="32"
          />
        </div>
        <div
          class="underline"
        >
          This Merchant Life
           on Steam
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`renders <GameDetails /> component unchanged 1`] = `
<div>
  <div>
    <div
      class="text-2xl mb-5"
    >
      Game Details
    </div>
    <div
      class="mb-20 border border-black"
    >
      <ul
        class="flex flex-wrap text-center place-items-center h-full border-b"
      >
        <li
          class="w-1/2 text-xl cursor-pointer h-full text-white bg-black"
        >
          <div>
            Showrunner
          </div>
        </li>
        <li
          class="w-1/2 text-xl cursor-pointer h-full text-black bg-white"
        >
          <div>
            This Merchant Life
          </div>
        </li>
      </ul>
      <div>
        <div
          class="py-6 mx-5"
        >
          <div
            class="text-lg mb-2"
          >
            Description
          </div>
          <div>
            Create and run your own TV show! An isometric management game where you craft scripts, populate your world with characters and cast actors to play them. Hire and manage staff, develop your studio and gain a dedicated following.
          </div>
        </div>
        <div
          class="py-6 mx-5"
        >
          <div
            class="text-lg mb-2"
          >
            Genre
          </div>
          <div>
            Simulation, Strategy, Management, Singleplayer
          </div>
        </div>
        <div
          class="py-6 mx-5"
        >
          <div
            class="text-lg mb-2"
          >
            Platforms
          </div>
          <div>
            PC - Steam
          </div>
        </div>
        <div
          class="py-6 mx-5"
        >
          <div
            class="text-lg mb-2"
          >
            Store
          </div>
          <div>
            <a
              href="https://store.steampowered.com/app/2058200"
              rel="noopener"
              target="blank"
            >
              <div
                class="inline-block align-middle underline"
              >
                Steam
              </div>
            </a>
          </div>
        </div>
        <div
          class="py-6 mx-5"
        >
          <div
            class="text-lg mb-2"
          >
            Logos, banners, image assets
          </div>
          <a
            class="underline"
            href="/pressAssets/showrunner/assets.zip"
          >
            Download zip file
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders <GameDetailsSection /> component unchanged 1`] = `
<div>
  <div
    class="py-6 mx-5"
  >
    <div
      class="text-lg mb-2"
    >
      Test
    </div>
    <div>
      Test
    </div>
  </div>
</div>
`;

exports[`renders <GameDetailsSection /> store link component unchanged 1`] = `
<div>
  <div
    class="py-6 mx-5"
  >
    <div
      class="text-lg mb-2"
    >
      Test
    </div>
    <div>
      <a
        href="https://store.steampowered.com/app/Test"
        rel="noopener"
        target="blank"
      >
        <div
          class="inline-block align-middle underline"
        >
          Steam
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`renders <NavBar /> component unchanged 1`] = `
<div>
  <nav
    class="flex h-11 place-content-end align-middle mr-5"
    data-testid="navbar"
  >
    <div
      class="flex my-auto gap-x-5"
    >
      <a
        class="pointer-events-none cursor-default"
        data-testid="navbar-link-Home"
        href="/"
      >
        Home
      </a>
      <a
        class="underline inline"
        data-testid="navbar-link-Showrunner"
        href="/showrunner"
      >
        Showrunner
      </a>
      <a
        class="underline inline"
        data-testid="navbar-link-This Merchant Life"
        href="/this-merchant-life"
      >
        This Merchant Life
      </a>
      <a
        class="underline inline"
        data-testid="navbar-link-Press Kit"
        href="/presskit"
      >
        Press Kit
      </a>
    </div>
  </nav>
</div>
`;

exports[`renders <PresskitSection /> component unchanged 1`] = `
<div>
  <div
    class="my-10"
  >
    <h2
      class="text-2xl my-5"
    >
      Test
    </h2>
    <div>
      Test
    </div>
  </div>
</div>
`;

exports[`renders <SharedHead /> component unchanged 1`] = `<div />`;

exports[`renders <Video /> component unchanged 1`] = `
<div>
  <div
    class="max-w-2xl mt-10 mb-12 mx-auto"
  >
    <h2
      class="text-2xl mb-5"
    >
      Trailer
    </h2>
    <div
      class="relative pb-[56.25%] h-0 overflow-hidden"
      style="box-shadow: 0 10px 10px -10px undefined;"
    >
      <iframe
        allow="encrypted-media"
        allowfullscreen=""
        class="absolute t-0 l-0 w-full h-full"
        frameborder="0"
        src="https://www.youtube-nocookie.com/embed/8UPMQbm8WkQ?modestbranding=1&rel=0"
        title="Test"
      />
    </div>
  </div>
</div>
`;
